--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
 
         <nav class="sidebar">
-            <img src="avatar_smoke.jpg" alt="smoke" width="100%">
+            <img src="./photos/avatar_smoke.jpg" alt="smoke" width="100%">
             <a href="#" class="awrap">
                 <i class="fa fa-home" id="h1"></i>
              <p>HOME</p>
@@ -46,8 +46,8 @@
                 John Doe</h1>
                 <!-- <h2 class="head">  Doe.</h2> -->
                 <p class="p1">Photographer and Web Designer</p>
-                <img id="man1"  src="man_smoke.jpg" alt="man" width="400" height="400">
-                <img id="man2" src="man_smoke.jpg" alt="man" width="992" height="1108">
+                <img id="man1"  src="./photos/man_smoke.jpg" alt="man" width="400" height="400">
+                <img id="man2" src="./photos/man_smoke.jpg" alt="man" width="992" height="1108">
             </header>
         </div>
 
@@ -146,7 +146,7 @@
            </div>
            <h3 class="head3" id=rep>My Reputation</h3>
            <div class="repu">
-            <img class="image1" src="bandmember.jpg" alt="bandmember">
+            <img class="image1" src="./photos/bandmember.jpg" alt="bandmember">
             <p>
                 <span class="pa1">Chris Fox.</span>
                 "CEO at Mighty Schools" <br>
@@ -157,7 +157,7 @@
             <br>
 
             <div class="reput">
-            <img class="image2" src="avatar_g2.jpg" alt="avatar">
+            <img class="image2" src="./photos/avatar_g2.jpg" alt="avatar">
             <p>
                 <span class="pa2">Rebecca Flex.</span>
                 "CEO at Company" <br>
@@ -174,15 +174,15 @@
     <hr>
     <div class="photos">
         <div class="pics">
-            <img src="wedding.jpg" alt="wed1" width="100%">
-            <img src="rocks.jpg" alt="rock" width="100%">
-            <img src="sailboat.jpg" alt="sail" width="100%">
+            <img src="./photos/wedding.jpg" alt="wed1" width="100%">
+            <img src="./photos/rocks.jpg" alt="rock" width="100%">
+            <img src="./photos/sailboat.jpg" alt="sail" width="100%">
         </div>
         <div class="pics1">
-            <img src="underwater.jpg" alt="un" width="100%">
-            <img src="chef.jpg" alt="chef" width="100%">
-            <img src="wedding (1).jpg" alt="wed2" width="100%">
-            <img src="p6.jpg" alt="p6" width="100%">
+            <img src="./photos/underwater.jpg" alt="un" width="100%">
+            <img src="./photos/chef.jpg" alt="chef" width="100%">
+            <img src="./photos/wedding (1).jpg" alt="wed2" width="100%">
+            <img src="./photos/p6.jpg" alt="p6" width="100%">
         </div>
     </div>
 </div>
